U1.L4.A3 nav bar challenge

--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Karma</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	
+	<header>
+
+		<nav class="topnav">
+
+		<div class="content">
+
+		<img class="logo" src="images/karma-logo.svg" alt="Logo Image" />
+
+		<ul class="links">
+			<li class="active">Meet Karma</li>
+			<li>How it Works</li>
+			<li>Store</li>
+			<li>Blog</li>
+			<li>Help</li>
+			<li>Login</li>
+		</ul>
+
+		</div>
+
+		</nav>
+
+	</header>
+
 </body>
 </html>
