--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Karma</title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	
 	<header>
 
-		<nav class="topnav">
+		<nav class="top-navigation">
 
 		<div class="content">
 
-		<img class="logo" src="images/karma-logo.svg" alt="Logo Image" />
-
 		<ul class="links">
-			<li class="active">Meet Karma</li>
-			<li>How it Works</li>
-			<li>Store</li>
-			<li>Blog</li>
-			<li>Help</li>
-			<li>Login</li>
+			<li class="active"><a href="#">Meet Karma</a></li>
+			<li><a href="#">How it Works</a></li>
+			<li><a href="#">Store</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Help</a></li>
+			<li><a href="#">Login</a></li>
 		</ul>
+
+		<img class="logo" src="images/karma-logo.svg" alt="Logo Image" />
 
 		</div>
 
