--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@
 
 	</header>
 
+	<section class="intro">
+		<div class="content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you, everywhere you go.</h3>
+			<div class="buttons">
+				<button>Learn More</button>
+			</div>
+		</div>
+	</section>
+
 </body>
 </html>
