--- a/index.html
+++ b/index.html
@@ -43,5 +43,25 @@
 		</div>
 	</section>
 
+	<section class="cases">
+		<div class="content">
+			<h2>Everyone needs a little Karma.</h2>
+			<ul class="svg-icons">
+				<li>
+					<img class="svg-icon" src="images/icon-devices.svg" alt=" Image" />
+					<h3>Internet for all devices</h3>
+				</li>
+				<li>
+					<img class="svg-icon" src="images/icon-coffee.svg" alt=" Image" />
+					<h3>Boost your productivity</h3>
+				</li>
+				<li>
+					<img class="svg-icon" src="images/icon-refill.svg" alt=" Image" />
+					<h3>Pay as You Go</h3>
+				</li>
+			</ul>
+		</div>
+	</section>
+
 </body>
 </html>
