--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 
 <body>
 	
-	<header>
-
 		<nav class="top-navigation">
 
 		<div class="content">
@@ -31,8 +29,6 @@
 
 		</nav>
 
-	</header>
-
 	<section class="intro">
 		<div class="content">
 			<h1>Introducing Karma</h1>
@@ -46,6 +42,26 @@
 	<section class="cases">
 		<div class="content">
 			<h2>Everyone needs a little Karma.</h2>
+
+
+			<div class="devices">
+					<img class="svg-icon" src="images/icon-devices.svg" alt=" Image" />
+					<h3>Internet for all devices</h3>
+			</div>
+
+			<div class="devices">
+					<img class="svg-icon" src="images/icon-coffee.svg" alt=" Image" />
+					<h3>Boost your productivity</h3>
+			</div>
+
+			<div class="devices">
+					<img class="svg-icon" src="images/icon-refill.svg" alt=" Image" />
+					<h3>Pay as You Go</h3>
+			</div>
+
+
+			<!--
+
 			<ul class="svg-icons">
 				<li>
 					<img class="svg-icon" src="images/icon-devices.svg" alt=" Image" />
@@ -60,6 +76,10 @@
 					<h3>Pay as You Go</h3>
 				</li>
 			</ul>
+
+			-->
+
+
 		</div>
 	</section>
 
