--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
 
 <body>
